src/test/deca/context/invalid/champ_protege_cond_1.deca
// Description :
//    Test de la sélection d'un champ protégé dans une classe 
//
// Résultats:
//    Ligne 22 : 
//
// Historique:
//    créé le 22/01/2017

class A {
  protected int x;
}
class B extends A {
  int getX(A a) {
    return a.x;
  }
}
class X {
  void m() {
    A a = new A();
    B b = new B();
    println(b.getX(a)); // Ok du point de vue de la condition (2)
  }
}
